<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="3">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_1"
        style="@style/KeyButtonStyle"
        android:text="@string/key_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_2"
        style="@style/KeyButtonStyle"
        android:text="@string/key_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_3"
        style="@style/KeyButtonStyle"
        android:text="@string/key_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_4"
        style="@style/KeyButtonStyle"
        android:text="@string/key_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_5"
        style="@style/KeyButtonStyle"
        android:text="@string/key_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_6"
        style="@style/KeyButtonStyle"
        android:text="@string/key_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_7"
        style="@style/KeyButtonStyle"
        android:text="@string/key_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_8"
        style="@style/KeyButtonStyle"
        android:text="@string/key_8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_9"
        style="@style/KeyButtonStyle"
        android:text="@string/key_9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/key_0"
        style="@style/KeyButtonStyle"
        android:layout_column="1"
        android:text="@string/key_0" />

    <ImageButton
        android:id="@+id/key_backspace"
        style="@style/KeyButtonStyle"
        android:layout_column="2"
        android:contentDescription="@string/backspace_content_description"
        android:scaleType="fitXY"
        android:padding="@dimen/small_margin"
        android:src="@drawable/keypad_backspace_icon"
        android:text="@string/key_9" />
</GridLayout>