<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/arrow_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back_content_description"
        android:src="@drawable/arrow_back" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/code_sent_content_description"
        android:src="@drawable/sms_token" />

    <TextView
        android:id="@+id/code_sent_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/code_sent_text" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="+7 902 759 14 40" />

    <!-- Был бы реальный проект, лучше было бы использовать ViewStub -->
    <TextView
        android:id="@+id/code_sent_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/code_was_already_sent2"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/otp_code_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            tools:text="123" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/resend_text"
        android:textSize="@dimen/smallTextSize"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/countdown_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/countdown_timer_template"/>

    <ImageButton
        android:id="@+id/button_next"
        style="@style/NextButtonStyle"
        android:layout_gravity="center|end"
        android:layout_marginTop="@dimen/big_margin"
        android:contentDescription="@string/button_next_description" />

</LinearLayout>