<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/phone_number_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:autofillHints="@null"
        android:background="@null"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@id/phone_number_prompt"
        app:layout_constraintStart_toStartOf="@id/phone_number_prompt"
        app:layout_constraintTop_toBottomOf="@id/phone_number_prompt"
        tools:ignore="LabelFor" />

    <include
        android:id="@+id/keypad"
        layout="@layout/keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_big_margin"
        app:layout_constraintEnd_toEndOf="@id/phone_number_input"
        app:layout_constraintStart_toStartOf="@id/phone_number_input"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input" />

    <ImageButton
        android:id="@+id/button_next"
        style="@style/NextButtonStyle"
        android:contentDescription="@string/button_next_description"
        app:layout_constraintEnd_toEndOf="@+id/keypad"
        app:layout_constraintTop_toBottomOf="@+id/keypad" />

</androidx.constraintlayout.widget.ConstraintLayout>